Kubernetes/HW5/dep_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend
  labels:
    app: ng_mul
spec:
  selector:
    matchLabels:
      app: ng_mul
  replicas: 3
  template:
    metadata:
      labels:
        app: ng_mul
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
