Kubernetes/HW5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-controller
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx
  rules:
  - host: only-my-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netology-svc
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: netology-svc
            port:
              number: 9002
